= Release notes v.8.6

== Table of Contents

* Fixed sonar alerts

== Fixed sonar alerts

Sonar alerts were fixed for classes:

- AesEcbInstanceFactoryImpl
- JweCryptoProviderImpl
- JweGsmInstanceFactoryImpl
- ChecksumCalculatingFactory
- OneOffConsentExpirationServiceTest
- AisConsentMapperTest
- CmsCorePaymentMapper
- CmsPsuPisServiceInternal
- SecurityDataService
- AesEcbCryptoProviderImpl
- ObsoletePiisConsentJpaRepository
- AisConsentConfirmationExpirationServiceImpl
- AccountAccessUpdater
- CmsAspspAisExportServiceInternal
- PisAuthService
- PisCancellationAuthService
- AdditionalPsuData
- PsuDataEmbeddable
- AccountAccess
- AisConsent
- PiisConsentEntity
- PisCommonPaymentIT
- AspspConsentDataPsuApiControllerIT
- CmsPsuApiDefaultValue
- CmsConstant
- CryptoConfig